--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.20)
 project(led_test)
 
 add_library(led_test)
-target_compile_options(sample PRIVATE -Wall -Wextra)
-set_target_properties(sample PROPERTIES C_STANDARD 11)
+target_compile_options(led_test PRIVATE -Wall -Wextra)
+set_target_properties(led_test PROPERTIES C_STANDARD 11)
 
-target_include_directories(sample PUBLIC include)
+target_include_directories(led_test PUBLIC include)
 add_subdirectory(src)
 
 file(CONFIGURE OUTPUT .gitignore
